--- a/pqueue-bootstrapped.cabal
+++ b/pqueue-bootstrapped.cabal
@@ -27,12 +27,27 @@ library
     -- other-modules:
     default-extensions:
         BangPatterns
+      , CPP
+      , FlexibleInstances
+      , KindSignatures
+      , MultiParamTypeClasses
       , GADTs
       , MagicHash
+      , PatternSynonyms
       , ScopedTypeVariables
+      , TypeFamilies
       , UnboxedTuples
+      , ViewPatterns
     -- other-extensions:
-    build-depends:    base ^>=4.17.0.0
+
+    -- We currently need -fspec-constr to get GHC to compile conversions
+    -- from lists well. We could (and perhaps should) write those a bit
+    -- differently so we won't need it. Regardless, it'll be necessary
+    -- for list fusion—which doesn't work at the moment.
+    ghc-options:      -fspec-constr
+    build-depends:
+        base ^>=4.17.0.0
+      , indexed-traversable >= 0.1 && < 0.2
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -43,6 +58,18 @@ test-suite pqueue-bootstrapped-test
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
+    main-is:          Main.hs
+    build-depends:
+        base ^>=4.17.0.0,
+        pqueue-bootstrapped
+
+benchmark pqueue-bootstrapped-bench
+    import:           warnings
+    default-language: Haskell2010
+    -- other-modules:
+    -- other-extensions:
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   benchmarks
     main-is:          Main.hs
     build-depends:
         base ^>=4.17.0.0,
